# atomic-rag-pdf

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-build.sh  docker-run.sh  launch_streamlit.sh  main.py  pyproject.toml  setup.sh  streamlit_app.py  test_basic.py  test_logging.py
data/pdfs/: README.md
logs/: LOGGING_QUICK_START.md  LOGGING_SYSTEM.md  README.md
scripts/: cleanup_qdrant.py  init_db.py  run_tests.py
src/agents/: data_loader_agent.py  qa_agent.py  research_agent.py
src/config/: __init__.py  constants.py  settings.py
src/schemas/: answer_schema.py  product_schema.py  query_schema.py
src/tools/: answer_tools.py  llm_parser_tools.py  llm_query_classifier.py  ocr_tools.py  parser_tools.py  reranker_tools.py  search_tools.py  storage_tools.py  translation_tools.py
src/utils/: db_manager.py  embedding_manager.py  logging_config.py  model_info.py  schema_utils.py
storage/: README.md
tests/: conftest.py  test_data_loader.py  test_db_query.py  test_dynamic_schema.py  test_integration.py  test_llm_parser.py  test_logging.py  test_qa_agent.py  test_research_agent.py
